build_log.txt
    Checking pulse_compiler v0.1.0 (C:\Users\Kuntal\Documents\Pulse\pulse_lang\pulse_compiler)
warning: unused import: `crate::lexer::Token`
 --> pulse_compiler\src\ast.rs:3:5
  |
3 | use crate::lexer::Token;
  |     ^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0599]: no variant or associated item named `Bool` found for enum `Token` in the current scope
   --> pulse_compiler\src\parser_v2.rs:254:20
    |
254 |             Token::Bool(b) => Ok(Expr::Literal(Constant::Bool(b))),
    |                    ^^^^ variant or associated item not found in `Token`
    |
   ::: pulse_compiler\src\lexer.rs:4:1
    |
  4 | pub enum Token {
    | -------------- variant or associated item `Bool` not found for this enum

warning: unused variable: `name`
   --> pulse_compiler\src\parser_v2.rs:183:32
    |
183 |                 Decl::Function(name, params, ret, body) => {
    |                                ^^^^ help: if this is intentional, prefix it with an underscore: `_name`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `params`
   --> pulse_compiler\src\parser_v2.rs:183:38
    |
183 |                 Decl::Function(name, params, ret, body) => {
    |                                      ^^^^^^ help: if this is intentional, prefix it with an underscore: `_params`

warning: unused variable: `ret`
   --> pulse_compiler\src\parser_v2.rs:183:46
    |
183 |                 Decl::Function(name, params, ret, body) => {
    |                                              ^^^ help: if this is intentional, prefix it with an underscore: `_ret`

warning: unused variable: `body`
   --> pulse_compiler\src\parser_v2.rs:183:51
    |
183 |                 Decl::Function(name, params, ret, body) => {
    |                                                   ^^^^ help: if this is intentional, prefix it with an underscore: `_body`

For more information about this error, try `rustc --explain E0599`.
warning: `pulse_compiler` (lib) generated 5 warnings
error: could not compile `pulse_compiler` (lib) due to 1 previous error; 5 warnings emitted
